--- a/projetin/contador/cont.html
+++ b/projetin/contador/cont.html
@@ -25,8 +25,8 @@
         <p>Fim: <input type="number" name="fim" id="txtf" /></p>
         <p>Passo: <input type="number" name="passo" id="txtp" /></p>
         <p>
-          <input type="button" value="Contar" onclick="contar()" />
-          <input type="button" value="Reset" onclick="reset()" />
+          <input type="button" class="button" value="Contar" onclick="contar()" />
+          <input type="button" class="button" value="Reset" onclick="reset()" />
         </p>
       </div>
       <div id="res">Preparando a contagem...</div>
