--- a/projetin/tabuada/tabuada.html
+++ b/projetin/tabuada/tabuada.html
@@ -16,14 +16,13 @@
         </ul>
       </li>
     </ul>
-    <br />
 
     <section>
       <h1>Tabuada</h1>
       <div class="tabu">
         <p>
           Número: <input type="number" name="num" id="txtn" />
-          <input type="button" value="Gerar Tabuada" onclick="tabuada()" />
+          <input type="button" class="button" value="Gerar Tabuada" onclick="tabuada()" />
         </p>
       </div>
       <div class="tabu">
